seconda commit (accedi risolto)

--- a/public/home.html
+++ b/public/home.html
@@ -150,7 +150,14 @@
       </div>
         
 
-        <input type="button" id="accedi" onClick="window.location.href='/public/accedi.php';" value="Accedi">
+      <input type="button" id="accedi" value="Accedi" onClick="window.location.href='/public/accedi.html';">
+
+<script>
+  function redirectToPage(page) {
+    window.location.href = page;
+  }
+</script>
+
 
         <!-- <input type="button" id="registrati" onClick="window.location.href='/public/registrati.html';" value="registrati">-->
        
